--- a/oop-practice.html
+++ b/oop-practice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M12 Assignment - OOP Practice</title>
-    <script src="js/oop-practice.js"></script>
+    <script src="js/oop-practice.js" defer></script>
 </head>
 <body>
     
