--- a/player.html
+++ b/player.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M12 Assignment - The Music Player Application</title>
-    <script src="js/player.js"></script>
+    <script src="js/player.js" defer></script>
 </head>
 <body>
     <h1>The Music Player</h1>
     <!-- ADD DROP DOWN MENU -->
+    <div >
+        <select id ="albumChoice">
+            <option value="" >Select an album to play</option>
+            
+        </select>
+    </div>
+    
     <!-- ADD PLAY BUTTON -->
+    <div id="result"></div>
+
     <!-- ADD SHOW FAVORITE ALBUM BUTTON -->
     <p id="favoriteAlbum"></p>
 </body>
