--- a/player.html
+++ b/player.html
@@ -19,11 +19,11 @@
 </head>
 <body>
     <h1>The Music Player</h1>
-    <!-- ADD DROP DOWN MENU -->
+    
     <div class="flex-container" >
+        <h2>Select an album to play:</h2>
         <select class="box" id ="albumChoice">
-            <option value="" >Select an album to play</option>
-            
+    <!-- ADD DROP DOWN MENU -->    
         </select>
         <div id="result" class="box">
             <button id="favBtn">Show My Favorite Album</button>
